# GENN

./: .gitignore  CMakeLists.txt  Components.h  Connection.h  Genome.cpp  Genome.h  LICENSE  NEAT.cpp  NEAT.h  Network.cpp  Network.h  Neuron.h  README.md  Simulation.h  base64.cpp  base64.h  benchmark.h  main.cpp  test.cpp  test.lua  test.py
.imdone/: config.json
Legacy/: race.py  track.txt  trackDrawer.py  xor.py
examples/: Pole.cpp  Pole.h  Xor.h  main.cpp
include/: Genome.h
legacy-python/: vectormathTest.py
lib/: tigr.c
problems/: Xor.cpp  Xor.h
src/: Genome.cpp  NEAT.cpp  Network.cpp
